Fix namespacing issue with s9y + source code comments

--- a/src/scss/modules/_feedback.scss
+++ b/src/scss/modules/_feedback.scss
@@ -67,19 +67,21 @@ input[type=radio] {
 // Comments
 #comments {
     margin: (2 * $type-rhythm) 0;
+
+    .comment {
+        border: 1px solid $silver;
+        border-radius: 1px;
+        box-sizing: border-box;
+        margin: (2 * $type-rhythm) 0;
+        padding: 0 1rem;
+
+        &:nth-of-type(even) {
+            background: $lite-grey;
+        }
+    }
 }
 
 .comment {
-    border: 1px solid $silver;
-    border-radius: 1px;
-    box-sizing: border-box;
-    margin: (2 * $type-rhythm) 0;
-    padding: 0 1rem;
-
-    &:nth-of-type(even) {
-        background: $lite-grey;
-    }
-
     > header {
         min-height: 3rem;
         position: relative;
